+ Healthcheck in readme, DF, script done